// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding image plugin to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "loader": "./path/to/link",
        "options": Object {},
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\)\\$/,
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "TEST_PATH//./test-project//dist",
    "publicPath": "./",
  },
}
`;

exports[`Adding image plugin with loader options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "loader": "./path/to/link",
        "options": Object {
          "imageSizeLimitInBytes": 10000,
        },
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\)\\$/,
      },
    ],
  },
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "TEST_PATH//./test-project//dist",
    "publicPath": "./",
  },
}
`;
